# epic-games-scraper

./: .gitignore  Cargo.toml  README.md  package.json
src/: main.rs
