[package]
name = "epic-store-scraper"
version = "0.1.0"
authors = ["HurricaneInteractive <hurricane.interactive@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
hyper = "0.14"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.5"
regex = "1"
